--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,10 +5,21 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-phlow: # replace this with your info
-  name: "Phlow"
-  siterole: "webmaster, developer, copywriter, designer"
-  uri: http://phlow.de/
-  email:
-  twitter: "@phlow"
+cornell-colab: # replace this with your info
+  name: "Eliza, Iliana, & Kiran"
+  siterole: "webmaster"
+  uri: 
+  email: digitalcolab@cornell.edu
+iliana-b:
+  name: Iliana
+  uri:
+  email: itb23@cornell.edu
+eliza-b:
+  name: Eliza
+  uri:
+  email: ecb4@cornell.edu
+kiran-w:
+  name: Kiran
+  uri:
+  email: kam535@cornell.edu
 # you can add more authors here
