--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,63 +1,110 @@
-- title: Start
+- title: Home
   url: "/"
   side: left
 
-- title: Getting Started
-  url: "/getting-started/"
+- title: Resources
+  url: "/resources/"
   side: left
 
-- title: "Templates"
-  url: "/design/"
+- title: "Modules"
+  url: "/modules/"
   side: left
   dropdown:
-  - title: "Grid & Colors"
-    url: "/design/grid/"
-  - title: "Typography"
-    url: "/design/typography/typography/"
-  - title: "Page/Post"
-    url: "/design/page/"
-  - title: "Post-Left-Sidebar"
-    url: "/design/post-left-sidebar/"
-  - title: "Post-Right-Sidebar"
-    url: "/design/post-right-sidebar/"
-  - title: "Page Full-Width"
-    url: "/design/page-fullwidth/"
-  - title: "Blog-Page"
-    url: "/blog/"
-  - title: "Video"
-    url: "/design/video/"
-  - title: "Gallery"
-    url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
+  - title: "Week 1"
+    url: "/modules/week1/"
+  - title: "Week 2"
+    url: "/modules/week2/"
+  - title: "Week 3"
+    url: "/modules/week3/"
+  - title: "Week 4"
+    url: "/modules/week4/"
+  - title: "Week 5"
+    url: "/modules/week5/"
+  - title: "Week 6"
+    url: "/modules/week6/"
+  - title: "Week 7"
+    url: "/modules/week7/"
+  - title: "Week 8"
+    url: "/modules/week8/"
+  - title: "Week 9"
+    url: "/modules/week9/"
+  - title: "Week 10"
+    url: "/modules/week10/"
 
-- title: "Header Styles"
-  url: "/headers/"
+- title: "Collections"
+  url: "/collections/"
   side: left
   dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
+  - title: "Week 1"
+    url: "/modules/week1/"
+  - title: "Week 2"
+    url: "/modules/week2/"
+  - title: "Week 3"
+    url: "/modules/week3/"
+  - title: "Week 4"
+    url: "/modules/week4/"
+  - title: "Week 5"
+    url: "/modules/week5/"
+  - title: "Week 6"
+    url: "/modules/week6/"
+  - title: "Week 7"
+    url: "/modules/week7/"
+  - title: "Week 8"
+    url: "/modules/week8/"
+  - title: "Week 9"
+    url: "/modules/week9/"
+  - title: "Week 10"
+    url: "/modules/week10/"
+    
+- title: "Text"
+  url: "/text/"
+  side: left
+  dropdown:
+  - title: "Week 1"
+    url: "/modules/week1/"
+  - title: "Week 2"
+    url: "/modules/week2/"
+  - title: "Week 3"
+    url: "/modules/week3/"
+  - title: "Week 4"
+    url: "/modules/week4/"
+  - title: "Week 5"
+    url: "/modules/week5/"
+  - title: "Week 6"
+    url: "/modules/week6/"
+  - title: "Week 7"
+    url: "/modules/week7/"
+  - title: "Week 8"
+    url: "/modules/week8/"
+  - title: "Week 9"
+    url: "/modules/week9/"
+  - title: "Week 10"
+    url: "/modules/week10/"
 
-- title: Documentation
-  url: "/documentation/"
+- title: "Collections"
+  url: "/collections/"
   side: left
   dropdown:
-  - title: "Changelog"
-    url: "/changelog/"
-  - title: "Roadmap"
-    url: "/roadmap/"
+  - title: "Week 1"
+    url: "/modules/week1/"
+  - title: "Week 2"
+    url: "/modules/week2/"
+  - title: "Week 3"
+    url: "/modules/week3/"
+  - title: "Week 4"
+    url: "/modules/week4/"
+  - title: "Week 5"
+    url: "/modules/week5/"
+  - title: "Week 6"
+    url: "/modules/week6/"
+  - title: "Week 7"
+    url: "/modules/week7/"
+  - title: "Week 8"
+    url: "/modules/week8/"
+  - title: "Week 9"
+    url: "/modules/week9/"
+  - title: "Week 10"
+    url: "/modules/week10/"
 
 - title: Blog
   url: "/blog/"
