--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: cornell-colab
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://cornell-colab.github.io'
+url: 'https://kam535.github.io'
 baseurl: '/'
 
 # This is for the editing function in _/includes/improve_content
@@ -38,7 +38,7 @@ improve_content: https://github.com/kam535/sturdy-broccoli/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://cornell-colab.github.io/sturdy-broccoli/images/'
+urlimg: 'https://kam535.github.io/sturdy-broccoli/images/'
 
 
 # Logo size is 600x80 pixels
