--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,48 +38,48 @@
   - title: "Week 1"
     url: "/modules/week1/"
   - title: "Week 2"
-    url: "/modules/week2/"
+    url: "/collections/week2/"
   - title: "Week 3"
-    url: "/modules/week3/"
+    url: "/collections/week3/"
   - title: "Week 4"
-    url: "/modules/week4/"
+    url: "/collections/week4/"
   - title: "Week 5"
-    url: "/modules/week5/"
+    url: "/collections/week5/"
   - title: "Week 6"
-    url: "/modules/week6/"
+    url: "/collections/week6/"
   - title: "Week 7"
-    url: "/modules/week7/"
+    url: "/collections/week7/"
   - title: "Week 8"
-    url: "/modules/week8/"
+    url: "/collections/week8/"
   - title: "Week 9"
-    url: "/modules/week9/"
+    url: "/collections/week9/"
   - title: "Week 10"
-    url: "/modules/week10/"
+    url: "/collections/week10/"
     
 - title: "Text"
   url: "/text/"
   side: left
   dropdown:
   - title: "Week 1"
-    url: "/modules/week1/"
+    url: "/text/week1/"
   - title: "Week 2"
-    url: "/modules/week2/"
+    url: "/text/week2/"
   - title: "Week 3"
-    url: "/modules/week3/"
+    url: "/text/week3/"
   - title: "Week 4"
-    url: "/modules/week4/"
+    url: "/text/week4/"
   - title: "Week 5"
-    url: "/modules/week5/"
+    url: "/text/week5/"
   - title: "Week 6"
-    url: "/modules/week6/"
+    url: "/text/week6/"
   - title: "Week 7"
-    url: "/modules/week7/"
+    url: "/text/week7/"
   - title: "Week 8"
-    url: "/modules/week8/"
+    url: "/text/week8/"
   - title: "Week 9"
-    url: "/modules/week9/"
+    url: "/text/week9/"
   - title: "Week 10"
-    url: "/modules/week10/"
+    url: "/text/week10/"
 
 - title: Blog
   url: "/blog/"
