--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@
 - title: Resources
   url: "/resources/"
   side: left
+  dropdown:
+  - title: "List of Projects"
+    url: "/pages/list of projects.md
 
 - title: "Modules"
   url: "/modules/"
