--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,76 +13,78 @@
   url: "/modules/"
   side: left
   dropdown:
-  - title: "Week 1"
-    url: "/modules/week1/"
-  - title: "Week 2"
-    url: "/modules/week2/"
-  - title: "Week 3"
-    url: "/modules/week3/"
-  - title: "Week 4"
-    url: "/modules/week4/"
-  - title: "Week 5"
-    url: "/modules/week5/"
-  - title: "Week 6"
-    url: "/modules/week6/"
-  - title: "Week 7"
-    url: "/modules/week7/"
-  - title: "Week 8"
-    url: "/modules/week8/"
-  - title: "Week 9"
-    url: "/modules/week9/"
-  - title: "Week 10"
-    url: "/modules/week10/"
+  - title: "Day 1"
+    url: "/modules/day1/"
+  - title: "Day 2"
+    url: "/modules/day2/"
+  - title: "Day 3"
+    url: "/modules/day3/"
+  - title: "Day 4"
+    url: "/modules/day4/"
+  - title: "Day 5"
+    url: "/modules/day5/"
+  - title: "Day 6"
+    url: "/modules/day6/"
+  - title: "Day 7"
+    url: "/modules/day7/"
+  - title: "Day 8"
+    url: "/modules/day8/"
+  - title: "Day 9"
+    url: "/modules/day9/"
+  - title: "Day 10"
+    url: "/modules/day10/"
 
 - title: "Collections"
   url: "/collections/"
   side: left
   dropdown:
-  - title: "Week 1"
-    url: "/modules/week1/"
-  - title: "Week 2"
-    url: "/collections/week2/"
-  - title: "Week 3"
-    url: "/collections/week3/"
-  - title: "Week 4"
-    url: "/collections/week4/"
-  - title: "Week 5"
-    url: "/collections/week5/"
-  - title: "Week 6"
-    url: "/collections/week6/"
-  - title: "Week 7"
-    url: "/collections/week7/"
-  - title: "Week 8"
-    url: "/collections/week8/"
-  - title: "Week 9"
-    url: "/collections/week9/"
-  - title: "Week 10"
-    url: "/collections/week10/"
+  - title: "Day 1"
+    url: "/modules/day1/"
+  - title: "Day 2"
+    url: "/collections/day2/"
+  - title: "Day 3"
+    url: "/collections/day3/"
+  - title: "Day 4"
+    url: "/collections/day4/"
+  - title: "Day 5"
+    url: "/collections/day5/"
+  - title: "Day 6"
+    url: "/collections/day6/"
+  - title: "Day 7"
+    url: "/collections/day7/"
+  - title: "Day 8"
+    url: "/collections/day8/"
+  - title: "Day 9"
+    url: "/collections/day9/"
+  - title: "Day 10"
+    url: "/collections/day10/"
     
 - title: "Text"
   url: "/text/"
   side: left
   dropdown:
-  - title: "Week 1"
-    url: "/text/week1/"
-  - title: "Week 2"
-    url: "/text/week2/"
-  - title: "Week 3"
-    url: "/text/week3/"
-  - title: "Week 4"
-    url: "/text/week4/"
-  - title: "Week 5"
-    url: "/text/week5/"
-  - title: "Week 6"
-    url: "/text/week6/"
-  - title: "Week 7"
-    url: "/text/week7/"
-  - title: "Week 8"
-    url: "/text/week8/"
-  - title: "Week 9"
-    url: "/text/week9/"
-  - title: "Week 10"
-    url: "/text/week10/"
+  - title: "Day 1"
+    url: "/text/day1/"
+  - title: "Day 2"
+    url: "/text/day2/"
+  - title: "Day 3"
+    url: "/text/day3/"
+  - title: "Day 4"
+    url: "/text/day4/"
+  - title: "Day 5"
+    url: "/text/day5/"
+  - title: "Day 6"
+    url: "/text/day6/"
+  - title: "Day 7"
+    url: "/text/day7/"
+  - title: "Day 8"
+    url: "/text/day8/"
+  - title: "Day 9"
+    url: "/text/day9/"
+  - title: "Day 10"
+    url: "/text/day10/"
+  - title: "Day 11"
+    url: "/collections/day10/"
 
 - title: "Search"
   url: "/search/"
