--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -76,7 +76,7 @@
   - title: "Day 10"
     url: "/text/day10/"
   - title: "Day 11"
-    url: "/collections/day10/"
+    url: "/text/day11/"
 
 - title: "Search"
   url: "/search/"
