--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,11 +51,11 @@
   - title: "Day 7"
     url: "/collections/day7/"
   - title: "Day 8"
-    url: "/collections/day8/"
+    url: "/modules/day8/"
   - title: "Day 9"
     url: "/collections/day9/"
   - title: "Day 10"
-    url: "/collections/day10/"
+    url: "/modules/day10/"
     
 - title: "Text"
   url: "/text/"
@@ -76,11 +76,11 @@
   - title: "Day 7"
     url: "/text/day7/"
   - title: "Day 8"
-    url: "/text/day8/"
+    url: "/modules/day8/"
   - title: "Day 9"
     url: "/text/day9/"
   - title: "Day 10"
-    url: "/text/day10/"
+    url: "/modules/day10/"
   - title: "Day 11"
     url: "/text/day11/"
 
