--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ urlimg: 'https://kam535.github.io/summer-dh-2025/images/'
 
 
 # Logo size is 600x80 pixels
-logo: "colab.png"
+logo: "logo.png"
 
 # Gems
 gems:
