--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author: cornell-colab
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://kam535.github.io'
-baseurl: '/'
+baseurl: '/summer-dh-2025'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
