--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   side: left
   dropdown:
   - title: "List of Projects"
-    url: "/listofprojects/"
+    url: "https://digitalscholarship.library.cornell.edu/?p=1240"
 
 - title: "All"
   url: "/modules/"
