--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
   url: "/modules/"
   side: left
   dropdown:
-  - title: "Day 1"
+  - title: "June 02"
     url: "/modules/day1/"
     side: left
     dropdown:
@@ -20,68 +20,64 @@
         url: "/modules/day1/"
       - title: "TEXT"
         url: "/modules/day1/"
-  - title: "Day 3"
+  - title: "June 04"
     url: "/modules/day3/"
-  - title: "Day 5"
+  - title: "June 06"
     url: "/modules/day5/"
-  - title: "Day 6"
-    url: "/modules/day6/"
-  - title: "Day 8"
+  - title: "June 11"
     url: "/modules/day8/"
-  - title: "Day 10"
+  - title: "June 13"
     url: "/modules/day10/"
 
 - title: "Collections"
   url: "/collections/"
   side: left
   dropdown:
-  - title: "Day 1"
+  - title: "June 02"
     url: "/modules/day1/"
-  - title: "Day 2"
+  - title: "June 03"
     url: "/collections/day2/"
-  - title: "Day 3"
+  - title: "June 04"
     url: "/collections/day3/"
-  - title: "Day 4"
+  - title: "June 05"
     url: "/collections/day4/"
-  - title: "Day 5"
+  - title: "June 06"
     url: "/collections/day5/"
-  - title: "Day 6"
+  - title: "June 09"
     url: "/collections/day6/"
-  - title: "Day 7"
+  - title: "June 10"
     url: "/collections/day7/"
-  - title: "Day 8"
+  - title: "June 11"
     url: "/modules/day8/"
-  - title: "Day 9"
+  - title: "June 12"
     url: "/collections/day9/"
-  - title: "Day 10"
+  - title: "June 13"
     url: "/modules/day10/"
     
 - title: "Text"
   url: "/text/"
   side: left
   dropdown:
-  - title: "Day 1"
+  - title: "June 02"
     url: "/modules/day1/"
-  - title: "Day 2"
+  - title: "June 03"
     url: "/text/day2/"
-  - title: "Day 3"
+  - title: "June 04"
     url: "/text/day3/"
-  - title: "Day 4"
+  - title: "June 05"
     url: "/text/day4/"
-  - title: "Day 5"
+  - title: "June 06"
     url: "/text/day5/"
-  - title: "Day 6"
+  - title: "June 09"
     url: "/text/day6/"
-  - title: "Day 7"
+  - title: "June 10"
     url: "/text/day7/"
-  - title: "Day 8"
+  - title: "June 11"
     url: "/modules/day8/"
-  - title: "Day 9"
+  - title: "June 12"
     url: "/text/day9/"
-  - title: "Day 10"
+  - title: "June 13"
     url: "/modules/day10/"
-  - title: "Day 11"
-    url: "/text/day11/"
 
 - title: "Search"
   url: "/search/"
